Progress on getting existing tests to pass

--- a/tests/sample_data/testproject/testproject/spider_templates/testspider_startrequests.py.jinja
+++ b/tests/sample_data/testproject/testproject/spider_templates/testspider_startrequests.py.jinja
@@ -12,7 +12,7 @@ class TestSpider(scrapy.Spider):
     def start_requests(self):
         for url in self.initial_urls:
             yield scrapy.Request(
-                url, callback=self.some_callback, meta={"referer": url}
+                url, callback=self.some_callback, meta={{"referer": url}}
             )
 
     def some_callback(self, response):
